refactor(svm): simplify SVM delta sync config
Replace the three overlapping offset properties (svm.sync.modifiedAfter.
days, schedule.svmsync.delta.offset.days, schedule.svmsync.vuln.delta.
offset.days) with a single uniform delta overlap window applied to all
SVM sync types (default: 1 day).

Introduce schedule.svmsync.cleanup.frequency.days (default: 7) so that
after the configured interval the next run is performed as a full sync,
allowing entities deleted on the SVM side to be purged locally (delta
syncs cannot observe deletions).

Add unit tests for SVMUtils and VMProcessHandler.

Improve query performance in VMProcessReportingRepository

Update schema of delta SVM query response

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>